# bulk-euclid-cutouts

./: .gitignore  README.md  overlap_test.ipynb  pyproject.toml  setup.py
bulk_euclid/: cutout_utils.py  pipeline_utils.py
bulk_euclid/external_targets/: a_run.py  from_karina.py  lensing_cutout_colours.ipynb  misc_target_list_creation.ipynb  notebook_version.ipynb  pipeline.py  run_from_console.py  run_pipeline.py  tutorial_notebook.ipynb
bulk_euclid/mer_catalog_targets/: a_make_catalogs_and_cutouts.py  b_export.py  run_from_console.py
configs/: example_config.yaml  external_targets_debug.yaml  external_targets_latest.yaml  remote_debug.yaml  v3_challenge_midaug.yaml  v4_post_euclid_challenge.yaml
for_outreach/: euclid_gif.py
gz_euclid/: cutout_utils.py  cutout_utils_duplicate.py  morphology_utils.py  pipeline_utils.py  upload_to_gz.py
gzeuclid/: cutout_utils.py  cutout_utils_duplicate.py  morphology_utils.py  pipeline_utils.py  upload_to_gz.py
notebooks/: check_data_in_sas.ipynb  check_data_in_sas_lenses.ipynb  cutout_processing_experiments.ipynb  cutout_speed_test.ipynb  cutouts_of_specific_galaxies.ipynb  fits_io_test.ipynb  karina_counts_datalabs.ipynb  lens_candidate_counts.ipynb  survey_progression.ipynb  visual_selection_check.ipynb
run_pipeline/: bulk_cutouts_from_mer(4).ipynb  bulk_download_of_tiles_and_catalogs.ipynb  bulk_download_of_tiles_and_catalogs.py  create_master_catalog_and_cutouts.py  v2_challenge_launch.yaml  v3_challenge_midaug.yaml
tests/: check_a_tile.ipynb  external_targets.py  look_at_psf.ipynb
(+36 files in other folders)
