[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

# https://stackoverflow.com/questions/72294299/multiple-top-level-packages-discovered-in-a-flat-layout
[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["gz_euclid"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project]
name = "gz-euclid"
version = "0.0.1"
dependencies = [
    'numpy',
    'pandas',
    'matplotlib',
    'scikit-learn',
    'astropy',
    'tqdm',
    'panoptes-client',
    'omegaconf'  # for config
]
requires-python = ">= 3.9"
authors = [
  {name = "Mike Walmsley", email = "walmsleymk1@gmail.com"}
]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/mwalmsley/gz-euclid-datalabs.git"
